--- a/NNProject1.GUI/MainWindow.xaml
+++ b/NNProject1.GUI/MainWindow.xaml
@@ -17,7 +17,7 @@
         </Menu>
 
         <Button Content="Create Associative Memory" HorizontalAlignment="Left" 
-                Margin="0,24,0,0" VerticalAlignment="Top" Width="208" 
+                Margin="0,85,0,0" VerticalAlignment="Top" Width="208" 
                 RenderTransformOrigin="-3.379,-3.509" Height="68" 
                 Command="{Binding CreateMemoryCommand}" />
         <TextBox uihelper:TextBoxBehaviour.AlwaysScrollToEnd="True" 
@@ -39,5 +39,6 @@
                  IsEnabled="{Binding IsEnabledTestVectorTextBox}"/>
         <Label Content="Test Vector:" HorizontalAlignment="Left" 
                Margin="0,345,0,0" VerticalAlignment="Top"/>
+        <Button Content="Create Input Matrix(GUI)" HorizontalAlignment="Left" Margin="0,24,0,0" VerticalAlignment="Top" Width="208" Height="61" Command="{Binding InputMatrixCommand}"/>
     </Grid>
 </Window>
